<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailEventActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgCover"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/tvEventName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/name_event"
            app:layout_constraintTop_toBottomOf="@id/imgCover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvOwnerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/organizer"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvEventName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/tvBegin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tvOwnerName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"/>
        <TextView
            android:id="@+id/tvEnd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tvBegin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/tvQuota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/quota"
            app:layout_constraintTop_toBottomOf="@id/tvEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description_event"
            app:layout_constraintTop_toBottomOf="@id/tvQuota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"/>



        <Button
            android:id="@+id/btnLink"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/Registration"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"/>

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgCover" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>